--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,19 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
-            height: 98vh;
+            /* height: 98vh;
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+            */
+            /* Shorthand - background
+                color > image > position > repeat > [size] > attachment            
+            */
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +34,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos ab repudiandae ipsa natus hic quod soluta vitae dicta? Veritatis quae assumenda, esse nulla, consequatur omnis vitae facere pariatur velit, id est amet maxime fugiat officia. Aperiam debitis assumenda quas eius libero, officia quia laborum perferendis. Asperiores aliquid illum rem veritatis. Sunt, unde laborum excepturi ab, at reprehenderit aut dolorum, quibusdam assumenda animi laboriosam hic? Reprehenderit optio incidunt inventore ipsa perspiciatis velit veniam recusandae adipisci nam!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum rerum quia aliquid quae eveniet. Impedit, officia minus sapiente molestias consectetur cupiditate modi, vero ad nobis dicta aspernatur? Autem perspiciatis quidem porro unde expedita dolor hic sunt reprehenderit voluptatum dignissimos ipsa nemo magni ab cumque nobis suscipit praesentium, pariatur est deserunt explicabo architecto laboriosam esse? Tempora laudantium aliquid doloribus eum optio consequatur dicta nesciunt. Eligendi iste ab voluptatum iusto explicabo, nulla laboriosam quibusdam non adipisci repudiandae placeat aperiam delectus necessitatibus blanditiis quas. Perspiciatis maxime quod voluptatem odio saepe laboriosam, delectus id modi pariatur corrupti labore quia? Enim quibusdam suscipit deserunt mollitia! Iusto ex cupiditate ipsam voluptate beatae, id earum. Laudantium molestias voluptas blanditiis veniam suscipit, quos et nesciunt quia maiores quisquam, eaque maxime. Aut sapiente laborum at atque repudiandae? Voluptates sapiente provident, labore laborum natus possimus odit nostrum corporis dolore quae repudiandae similique tempore consequuntur quasi itaque a suscipit quibusdam cum, rem soluta nulla. Expedita esse veniam perspiciatis, hic, ex est nulla assumenda at aspernatur sunt optio pariatur laborum porro commodi. Necessitatibus deserunt cumque cupiditate dicta molestiae possimus. Minima sunt deserunt tempore esse harum fugit repellendus doloremque at saepe nemo, consequatur ad aliquid minus, aut blanditiis vel temporibus nesciunt veritatis autem officiis alias optio? Quod, veniam perferendis? Id perferendis placeat voluptatem! Ut eius cumque maiores esse accusantium omnis sed voluptatibus excepturi minima iste voluptates, perspiciatis eveniet deserunt aliquam ea autem ad laborum assumenda. Perferendis velit dicta cupiditate est, in ad vero et labore voluptatibus architecto exercitationem deleniti hic, quo, quaerat vitae harum. Consequatur, culpa ipsa ullam assumenda rem sit modi quaerat doloribus animi tempore deserunt dolor cupiditate ad! Mollitia optio quam natus. Laudantium, cumque! Inventore eum aliquid obcaecati deserunt blanditiis accusantium pariatur quaerat incidunt voluptas. Aspernatur rerum commodi ipsum? Maxime molestiae sunt autem iure enim recusandae nulla ducimus corporis facilis quisquam!</p>
     </main>
 </body>
 </html>
