--- a/exercicios/ex0024/iframe02.html
+++ b/exercicios/ex0024/iframe02.html
@@ -17,7 +17,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta accusamus soluta et tenetur saepe laboriosam quibusdam facere blanditiis distinctio nostrum atque, fugiat sit autem esse voluptatum, eligendi eveniet, omnis reiciendis eos obcaecati. Quia incidunt quos dignissimos illo cupiditate quaerat ex voluptatum sunt odit deleniti minus at doloribus velit, excepturi odio sequi eum temporibus? Consectetur soluta quasi veniam incidunt officia natus laborum eligendi optio ipsa dignissimos molestias culpa repellendus facilis sapiente veritatis magnam, animi nemo minus. Quod natus omnis nisi nulla commodi necessitatibus officiis obcaecati eligendi nam esse, aperiam inventore eius incidunt porro maiores id? Alias numquam eos asperiores odit nesciunt?</p>
 
-    <iframe src="pagina001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pagina001.html" frameborder="0" height="500" width="500">
+        <p>Infelismente seu navegador não é compatível com isso!</p>
+    </iframe>
     
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores exercitationem modi, soluta recusandae delectus maxime minus quas saepe earum quam ducimus dolorem, voluptate accusamus sit distinctio odio. Labore odio, consectetur ea corrupti laborum expedita molestiae quibusdam minus quam distinctio. Nulla reprehenderit tempora obcaecati a assumenda beatae eaque explicabo repellat adipisci minus mollitia tenetur nisi, itaque molestias amet quibusdam odit error facere? Ab inventore sequi consectetur quisquam enim. Consequatur dolores eligendi similique, repellat ex cumque? Nihil fugit cumque officiis dignissimos maiores!</p>
 </body>
