--- a/Tentativas de site/projeto-iframe/index.html
+++ b/Tentativas de site/projeto-iframe/index.html
@@ -15,8 +15,8 @@
         </section>
         <section id="redes-sociais">
             <a href="home.html" target="tela"> <img src="imagens/logo-home.jpg" alt=""></a> <br>
-            <a href="maps.html" target="tela"> <img src="imagens/google-maps.png" alt="maps"></a> <br>
-            <a href="waze.html" target="tela"> <img src="imagens/waze.png" alt=""></a> <br>
+            <a href="maps.html" target="tela"> <img src="imagens/logo-facebook.jpg" alt="Facebook"></a> <br>
+            <a href="waze.html" target="tela"> <img src="imagens/logo-github.jpg" alt="GitHub"></a> <br>
         </section>
     </main>
 </body>
